# src/routes/index.ts
@@ -3,6 +3,7 @@ import { authRouter } from "./auth-routes"
 import { postRouter } from "./post-routes"
 import { likeRouter } from "./like-routes"
 import { commentRouter } from "./comment-routes"
+import { followingRouter } from "./following-routes"
 
 const router = Router()
 
@@ -10,5 +11,6 @@ router.use("/auth", authRouter)
 router.use("/posts", postRouter)
 router.use("/likes", likeRouter)
 router.use("/comments", commentRouter)
+router.use("/following", followingRouter)
 
 export { router }
